[gd_scene load_steps=5 format=2]

[ext_resource path="res://battles/ui/battle_ui.gd" type="Script" id=1]
[ext_resource path="res://battles/ui/rivers/RiversUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://cards/ui/DeckUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://battles/ui/HandUI.tscn" type="PackedScene" id=4]

[node name="BattleUI" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="MenuBar" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="Button" type="Button" parent="MenuBar" index="0"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MENU SHIT"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Size Flags" ]

[node name="DuelArea" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 73.0
margin_right = 1024.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 50.0
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="HeroPlacement" type="CenterContainer" parent="DuelArea" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 348.0
margin_right = 152.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 15.0
use_top_left = false
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="RiverContainer" type="HBoxContainer" parent="DuelArea" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 56.0
margin_right = 867.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 70.0
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="HeroMinions" type="VBoxContainer" parent="DuelArea/RiverContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 67.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="A" type="CenterContainer" parent="DuelArea/RiverContainer/HeroMinions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 67.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="B" type="CenterContainer" parent="DuelArea/RiverContainer/HeroMinions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 67.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="C" type="CenterContainer" parent="DuelArea/RiverContainer/HeroMinions" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 148.0
margin_right = 67.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="D" type="CenterContainer" parent="DuelArea/RiverContainer/HeroMinions" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 222.0
margin_right = 67.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="HeroRivers" parent="DuelArea/RiverContainer" index="1" instance=ExtResource( 2 )]

margin_left = 71.0
margin_right = 342.0
margin_bottom = 292.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="TimerBar" type="ProgressBar" parent="DuelArea/RiverContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_right = 362.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Size Flags" ]

[node name="EnemyRivers" parent="DuelArea/RiverContainer" index="3" instance=ExtResource( 2 )]

margin_left = 366.0
margin_right = 637.0
margin_bottom = 292.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="EnemyMinions" type="VBoxContainer" parent="DuelArea/RiverContainer" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 641.0
margin_right = 711.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0

[node name="A" type="CenterContainer" parent="DuelArea/RiverContainer/EnemyMinions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="B" type="CenterContainer" parent="DuelArea/RiverContainer/EnemyMinions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 70.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="C" type="CenterContainer" parent="DuelArea/RiverContainer/EnemyMinions" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 70.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="D" type="CenterContainer" parent="DuelArea/RiverContainer/EnemyMinions" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 12.0
margin_right = 70.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="EnemyPlacement" type="CenterContainer" parent="DuelArea" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 871.0
margin_top = 348.0
margin_right = 1024.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 15.0
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="CardArea" type="HBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 425.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 25.0
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="DeckContainer" type="CenterContainer" parent="CardArea" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 57.0
margin_right = 101.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="TempDeck" parent="CardArea/DeckContainer" index="0" instance=ExtResource( 3 )]

margin_left = 30.0
margin_right = 70.0
margin_bottom = 60.0
_sections_unfolded = [ "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="Hand" parent="CardArea" index="1" instance=ExtResource( 4 )]

margin_left = 105.0
margin_top = 87.0
margin_right = 917.0
margin_bottom = 87.0
size_flags_stretch_ratio = 80.0
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="DiscardContainer" type="CenterContainer" parent="CardArea" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 921.0
margin_top = 57.0
margin_right = 1024.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="TempDiscard" parent="CardArea/DiscardContainer" index="0" instance=ExtResource( 3 )]

margin_left = 31.0
margin_right = 71.0
margin_bottom = 60.0
_sections_unfolded = [ "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags" ]


